--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,11 @@
     "version": "1.0",
     "permissions": [
       "activeTab",
-      "scripting"
+      "scripting",
+      "storage"
     ],
-    "content_scripts": [
+    "options_page": "options.html",
+        "content_scripts": [
       {
         "matches": [
           "https://x.com/*",
