--- a/manifest.json
+++ b/manifest.json
@@ -7,20 +7,20 @@
       "scripting",
       "storage"
     ],
-    "options_page": "options.html",
-        "content_scripts": [
+    "options_page": "dist/options.html",
+    "content_scripts": [
       {
         "matches": [
           "https://x.com/*",
           "https://twitter.com/*"
         ],
         "js": [
-          "content.js"
+          "dist/content.js"
         ]
       }
     ],
     "background": {
-      "service_worker": "background.js"
+      "service_worker": "dist/background.js"
     }
   }
   
